--- a/README.qmd
+++ b/README.qmd
@@ -16,12 +16,18 @@ format: gfm
  ┃ ┃ ┣ 📜2024-02-28_water-samples.xlsx
  ┃ ┃ ┣ 📜2024-02-28_weather-data.xlsx
  ┃ ┃ ┣ 📜2024-03-01_dfs-no-profiles.RData
- ┃ ┃ ┣ 📜~$2024-02-28_profile-data.xlsx
- ┃ ┃ ┗ 📜~$2024-02-28_water-samples.xlsx
+ ┃ ┃ ┣ 📜2024-03-01_dfs_no_profiles.RData
+ ┃ ┃ ┣ 📜2024-03-04_dfs-no-profiles.RData
+ ┃ ┃ ┗ 📜~$2024-02-28_profile-data.xlsx
  ┃ ┗ 📂tidied
  ┃ ┃ ┣ 📜2024-03-01_ksf-clam-growth-data-tidied.csv
  ┃ ┃ ┣ 📜2024-03-01_ksf-compiled-data-tidied.csv
- ┃ ┃ ┗ 📜2024-03-01_ksf-oyster-cylinder-growth-data-tidied.csv
+ ┃ ┃ ┣ 📜2024-03-01_ksf-oyster-cylinder-growth-data-tidied.csv
+ ┃ ┃ ┣ 📜2024-03-04_ksf-clam-growth-data-tidied.csv
+ ┃ ┃ ┣ 📜2024-03-04_ksf-compiled-data-tidied.csv
+ ┃ ┃ ┣ 📜2024-03-04_ksf-oyster-cylinder-growth-data-tidied.csv
+ ┃ ┃ ┣ 📜2024-03-04_profiles-data-tidied.csv
+ ┃ ┃ ┗ 📜2024-03-04_water-samples-data-tidied.csv
  ┣ 📂docs
  ┣ 📜_quarto.yml
  ┣ 📜.gitignore
