--- a/index.qmd
+++ b/index.qmd
@@ -388,7 +388,7 @@ profiles_data_tidied <- profiles_data %>%
     date = ifelse(depth == "Date", temperature, NA_character_)
   ) %>%
   fill(location, date, .direction = "down") %>%
-  filter(depth != "Location", depth != "Date") %>%
+  filter(!(depth %in% c("Location", "Date"))) %>%
   mutate(
     location = case_when(
       location == "L1 Northwest buoy" ~ "back buoy",
