--- a/index.qmd
+++ b/index.qmd
@@ -524,6 +524,7 @@ paged_table(tidal_data_tidied)
 ```{r}
 #| code-summary: Environmental Variables Merged and Interpolated
 #| code-fold: true
+#| echo: false
 water_samples_profiles_data_merged <- reduce(list(profiles_data_tidied, water_samples_data_tidied), 
                        full_join, by = c("date", "location", "depth")) %>% 
   mutate(closest_date = case_when(
